[package]
name = "eme"
license = "MIT"
version = "1.1.0"
edition = "2021"
homepage = "https://github.com/Barquadd/eme"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[dependencies]
aes-gcm = "0.10.1"
clap = {version="4.0.32", features=["derive"]}
rand = "0.8.5"
sha2 = "0.10.6"